--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -93,7 +93,7 @@
         <div id="right">
             <div class="bot_wrapper">
                 <div id="launch_content">
-                    <button id="launch_button">PLAY</button>
+                    <button id="launch_button">PLAYE</button>
                     <div class="bot_divider"></div>
                     <button id="server_selection_button" class="bot_label">&#8226; No Server Selected</button>
                 </div>
