--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -44,129 +44,108 @@
         </div>
     </div>
     <div id="lower">
-        <div id="left">
-            <div class="bot_wrapper">
-                <div id="content">
-                    <div id="server_status_wrapper">
-                        <span class="bot_label" id="landingPlayerLabel">SERVER</span>
-                        <span id="player_count">OFFLINE</span>
-                    </div>
-                    <div class="bot_divider"></div>
-                    <div id="mojangStatusWrapper">
-                        <span class="bot_label">MOJANG STATUS</span>
-                        <span id="mojang_status_icon">&#8226;</span>
-                        <div id="mojangStatusTooltip">
-                            <div id="mojangStatusTooltipTitle">Services</div>
-                            <div id="mojangStatusEssentialContainer">
-                                <!-- Essential Mojang services are populated here. -->
-                            </div>
-                            <div id="mojangStatusNEContainer">
-                                <div class="mojangStatusNEBar"></div>
-                                <div id="mojangStatusNETitle">Non&nbsp;Essential</div>
-                                <div class="mojangStatusNEBar"></div>
-                            </div>
-                            <div id="mojangStatusNonEssentialContainer">
-                                <!-- Non Essential Mojang services are populated here. -->
-                            </div>
+        <div id="center">
+            <div id="content">
+                <div id="server_status_wrapper">
+                    <span class="bot_label" id="landingPlayerLabel">SERVER</span>
+                    <span id="player_count">OFFLINE</span>
+                </div>
+                <div class="bot_divider"></div>
+                <div id="mojangStatusWrapper">
+                    <span class="bot_label">MOJANG STATUS</span>
+                    <span id="mojang_status_icon">&#8226;</span>
+                    <div id="mojangStatusTooltip">
+                        <div id="mojangStatusTooltipTitle">Services</div>
+                        <div id="mojangStatusEssentialContainer">
+                            <!-- Essential Mojang services are populated here. -->
+                        </div>
+                        <div id="mojangStatusNEContainer">
+                            <div class="mojangStatusNEBar"></div>
+                            <div id="mojangStatusNETitle">Non&nbsp;Essential</div>
+                            <div class="mojangStatusNEBar"></div>
+                        </div>
+                        <div id="mojangStatusNonEssentialContainer">
+                            <!-- Non Essential Mojang services are populated here. -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div id="center">
-            <div class="bot_wrapper">
-                <div id="content">
-                    <button id="newsButton">
-                        <!--<img src="assets/images/icons/arrow.svg" id="newsButtonSVG"/>-->
-                        <div id="newsButtonAlert" style="display: none;"></div>
-                        <svg id="newsButtonSVG" viewBox="0 0 24.87 13.97">
-                            <defs>
-                                <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;}</style>
-                            </defs>
-                            <polyline class="arrowLine" points="0.71 13.26 12.56 1.41 24.16 13.02"/>
-                        </svg>
-                        &#10;<span id="newsButtonText">NEWS</span>
-                    </button>
-                </div>
+            <div id="launch_content">
+                <button id="launch_button">PLAY</button>
+                <div class="bot_divider"></div>
+                <button id="server_selection_button" class="bot_label">&#8226; No Server Selected</button>
             </div>
-        </div>
-        <div id="right">
-            <div class="bot_wrapper">
-                <div id="launch_content">
-                    <button id="launch_button">PLAY</button>
+            <div id="launch_details">
+                <div id="launch_details_left">
+                    <span id="launch_progress_label">0%</span>
                     <div class="bot_divider"></div>
-                    <button id="server_selection_button" class="bot_label">&#8226; No Server Selected</button>
                 </div>
-                <div id="launch_details">
-                    <div id="launch_details_left">
-                        <span id="launch_progress_label">0%</span>
-                        <div class="bot_divider"></div>
-                    </div>
-                    <div id="launch_details_right">
-                        <progress id="launch_progress" value="22" max="100"></progress>
-                        <span id="launch_details_text" class="bot_label">Please wait..</span>
-                    </div>
+                <div id="launch_details_right">
+                    <progress id="launch_progress" value="22" max="100"></progress>
+                    <span id="launch_details_text" class="bot_label">Please wait..</span>
                 </div>
             </div>
         </div>
     </div>
-    <div id="newsContainer">
-        <div id="newsContent" article="-1" style="display: none;">
-            <div id="newsStatusContainer">
-                <div id="newsStatusContent">
-                    <div id="newsTitleContainer">
-                        <a id="newsArticleTitle" href="#">Lorem Ipsum</a>
-                    </div>
-                    <div id="newsMetaContainer">
-                        <div id="newsArticleDateWrapper">
-                            <span id="newsArticleDate">Mar 15, 44 BC, 9:14 AM</span>
-                        </div>
-                        <div id="newsArticleAuthorWrapper">
-                            <span id="newsArticleAuthor">by Cicero</span>
-                        </div>
-                        <a href="#" id="newsArticleComments">0 Comments</a>
-                    </div>
-                </div>
-                <div id="newsNavigationContainer">
-                    <button id="newsNavigateLeft">
-                        <svg id="newsNavigationLeftSVG" viewBox="0 0 24.87 13.97">
-                            <defs>
-                                <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;transition: 0.25s ease;}</style>
-                            </defs>
-                            <polyline class="arrowLine" points="0.71 13.26 12.56 1.41 24.16 13.02"/>
-                        </svg>
-                    </button>
-                    <span id="newsNavigationStatus">1 of 1</span>
-                    <button id="newsNavigateRight">
-                        <svg id="newsNavigationRightSVG" viewBox="0 0 24.87 13.97">
-                            <defs>
-                                <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;transition: 0.25s ease;}</style>
-                            </defs>
-                            <polyline class="arrowLine" points="0.71 13.26 12.56 1.41 24.16 13.02"/>
-                        </svg>
-                    </button>
-                </div>
-            </div>
-            <div id="newsArticleContainer">
-                <div id="newsArticleContent">
-                    <div id="newsArticleContentScrollable">
-                        <!-- Article Content -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="newsErrorContainer">
-            <div id="newsErrorLoading">
-                <span id="nELoadSpan" class="newsErrorContent">Checking for News..</span>
-            </div>
-            <div id="newsErrorFailed" style="display: none;">
-                <span id="nEFailedSpan" class="newsErrorContent">Failed to Load News</span>
-                <button id="newsErrorRetry">Try Again</button>
-            </div>
-            <div id="newsErrorNone" style="display: none;">
-                <span id="nENoneSpan" class="newsErrorContent">No News</span>
-            </div>
-        </div>
-    </div>
+<!--    <div id="newsContainer">-->
+<!--        <div id="newsContent" article="-1" style="display: none;">-->
+<!--            <div id="newsStatusContainer">-->
+<!--                <div id="newsStatusContent">-->
+<!--                    <div id="newsTitleContainer">-->
+<!--                        <a id="newsArticleTitle" href="#">Lorem Ipsum</a>-->
+<!--                    </div>-->
+<!--                    <div id="newsMetaContainer">-->
+<!--                        <div id="newsArticleDateWrapper">-->
+<!--                            <span id="newsArticleDate">Mar 15, 44 BC, 9:14 AM</span>-->
+<!--                        </div>-->
+<!--                        <div id="newsArticleAuthorWrapper">-->
+<!--                            <span id="newsArticleAuthor">by Cicero</span>-->
+<!--                        </div>-->
+<!--                        <a href="#" id="newsArticleComments">0 Comments</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div id="newsNavigationContainer">-->
+<!--                    <button id="newsNavigateLeft">-->
+<!--                        <svg id="newsNavigationLeftSVG" viewBox="0 0 24.87 13.97">-->
+<!--                            <defs>-->
+<!--                                <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;transition: 0.25s ease;}</style>-->
+<!--                            </defs>-->
+<!--                            <polyline class="arrowLine" points="0.71 13.26 12.56 1.41 24.16 13.02"/>-->
+<!--                        </svg>-->
+<!--                    </button>-->
+<!--                    <span id="newsNavigationStatus">1 of 1</span>-->
+<!--                    <button id="newsNavigateRight">-->
+<!--                        <svg id="newsNavigationRightSVG" viewBox="0 0 24.87 13.97">-->
+<!--                            <defs>-->
+<!--                                <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;transition: 0.25s ease;}</style>-->
+<!--                            </defs>-->
+<!--                            <polyline class="arrowLine" points="0.71 13.26 12.56 1.41 24.16 13.02"/>-->
+<!--                        </svg>-->
+<!--                    </button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div id="newsArticleContainer">-->
+<!--                <div id="newsArticleContent">-->
+<!--                    <div id="newsArticleContentScrollable">-->
+<!--                        &lt;!&ndash; Article Content &ndash;&gt;-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div id="newsErrorContainer">-->
+<!--            <div id="newsErrorLoading">-->
+<!--                <span id="nELoadSpan" class="newsErrorContent">Checking for News..</span>-->
+<!--            </div>-->
+<!--            <div id="newsErrorFailed" style="display: none;">-->
+<!--                <span id="nEFailedSpan" class="newsErrorContent">Failed to Load News</span>-->
+<!--                <button id="newsErrorRetry">Try Again</button>-->
+<!--            </div>-->
+<!--            <div id="newsErrorNone" style="display: none;">-->
+<!--                <span id="nENoneSpan" class="newsErrorContent">No News</span>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
     <script src="./assets/js/scripts/landing.js"></script>
 </div>
